--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -27,7 +27,7 @@
 		<key>LSRequiresIPhoneOS</key>
 		<true/>
 		<key>NSCameraUsageDescription</key>
-		<string>Used to demonstrate image picker plugin</string>
+		<string>This application requires access to your camera to enable features like capturing photos or videos for profile updates, posts, and sharing moments with your community. Your privacy is important to us, and the camera will only be used with your permission.</string>
 		<key>NSFaceIDUsageDescription</key>
 		<string>Why is my app authenticating using face id?</string>
 		<key>NSLocalNetworkUsageDescription</key>
@@ -35,7 +35,7 @@
 		<key>NSMicrophoneUsageDescription</key>
 		<string>Used to capture audio for image picker plugin</string>
 		<key>NSPhotoLibraryUsageDescription</key>
-		<string>Used to demonstrate image picker plugin</string>
+		<string>This application needs access to your photo library to allow you to upload images or videos for your posts and profile. Your content remains private and will only be accessed with your consent.</string>
 		<key>UIApplicationSupportsIndirectInputEvents</key>
 		<true/>
 		<key>UIBackgroundModes</key>
