--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: dapp
 description: "Base app"
 publish_to: 'none'
 
-version: 1.0.4+5
+version: 1.0.8+9
 
 environment:
   sdk: '>=3.5.3 <4.0.0'
@@ -67,6 +67,7 @@ flutter:
     - assets/image/
     - assets/icon/
     - assets/json/
+    - assets/md/
 
   fonts:
     - family: HelveticaNeue
