--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,8 @@ project 'Runner', {
   'Debug' => :debug,
   'Profile' => :release,
   'Release' => :release,
+  'Debug-dev' => :debug,
+  'Release-prod' => :release,
 }
 
 def flutter_root
