--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,9 +58,11 @@ android {
     }
 
     compileSdkVersion flutterCompileSdkVersion
-    ndkVersion flutter.ndkVersion
+//    ndkVersion flutter.ndkVersion
+    ndkVersion = "27.0.12077973"
 
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -118,5 +120,5 @@ dependencies {
     implementation "com.google.firebase:firebase-analytics-ktx"
 
     // Flutter Local Notifications
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
 }
